# VFDashboard

./: .gitignore  README.md  astro.config.tauri.mjs  package-lock.json  package.json
android/: local.properties
docs/: CHARGING_LIVE_GUIDE.md  README.md  TAURI_WINDOWS_BUILD.md  USER_GUIDE_VI.md
public/: battery-report.html
scripts/: build-tauri-frontend.js  build-tauri-win.js  build-tauri-win.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.jsx  ActiveTripCard.jsx  AuthGate.jsx  BatteryHealthPage.jsx  BatteryReportModal.jsx  CarStatus.jsx  ChargingHistory.jsx  ChargingHistoryDrawer.jsx  ChargingLiveCard.jsx  ChargingLivePage.jsx  ChargingLogList.jsx  ChargingLogModal.jsx  ControlGrid.jsx  DashboardApp.jsx  DashboardController.jsx  DigitalTwin.jsx  ErrorBoundary.jsx  Login.jsx  MobileNav.jsx  SystemHealth.jsx  TelemetryDrawer.jsx  VehicleHeader.jsx
src/components/map/: ChargingStationPopup.jsx  InteractiveMap.jsx  MapControls.jsx
src/config/: deepScanGroups.js
src/i18n/: index.js
src/i18n/locales/en/: about.json  common.json  dashboard.json  login.json  telemetry.json  vehicle.json
src/i18n/locales/vi/: about.json  (+5 more)
src/layouts/: Layout.astro
src/services/: api.js  batteryTracker.js
src/stores/: batteryHealthStore.ts  chargingLiveStore.ts  languageStore.ts  mqttStore.ts  vehicleStore.ts
src/styles/: global.css
src/utils/: batteryReportTemplate.js  chargingLogExport.js  chargingLogView.js  tauriFetch.js  telemetryMapper.js
(+10 files in other folders)
